fix: add white space

--- a/src/entities/Portfolio/ui/SortDropdown/sort-dropdown.scss
+++ b/src/entities/Portfolio/ui/SortDropdown/sort-dropdown.scss
@@ -30,6 +30,7 @@
   cursor: pointer;
   transition: color 0.5s ease;
   text-wrap: nowrap;
+  white-space: nowrap;
 
   &:hover {
     color: $dark;
