--- a/src/shared/ui/BaseButton/base-button.scss
+++ b/src/shared/ui/BaseButton/base-button.scss
@@ -28,6 +28,7 @@
 .button-primary__text {
   font-family: 'Random Grotesque';
   text-wrap: nowrap;
+  white-space: nowrap;
   text-transform: uppercase;
   @include font(16px, 500, 22px);
 }
